# faststream-monitoring

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
config/: config.template.toml
grafana/dashboards/: faststream.json
grafana/provisioning/datasources/: datasource.yaml
prometheus/: prometheus.yaml
src/exchange/common/: config.py  logging.py  telemetry.py
src/exchange/notification_service/: handlers.py  main.py
src/exchange/order_service/: handlers.py  main.py  models.py
src/exchange/trade_service/: handlers.py  main.py  models.py
tempo/: tempo.yaml
tests/unit/: test_version.py
